# PineAPFEL

./: .clang-format  .gitignore  .pre-commit-config.yaml  .rumdl.toml  404.html  CMakeLists.txt  LICENSE  README.md  custom.css  index.html  meson.build  mkdocs.yml  plan.md
.github/workflows/: ci-python.yml  ci-test.yml  prek-checks.yml
benchmarks/: mplstyle.mplstyle  plot_xscan_zm.py  xscan_zm.cpp
building/: index.html
cli/: index.html  main.cpp
configuration-cards/: index.html
docs/: building.md  cli.md  configuration-cards.md  custom.css  evolution-modes.md  grid-creation.md  index.md  library.md  python-api.md  quick-start.md
docs/assets/stylesheets/: notebooks.css
evolution-modes/: index.html
examples/: create_grid.cpp  grid_dis.yaml  grid_sia.yaml  operator.yaml  theory.yaml
grid-creation/: index.html
include/pineapfel/: cards.h  evolution.h  pineapfel.h
overrides/: main.html
pineapfel/include/: cards.h  evolution.h  fill.h  grid_gen.h  pineapfel.h  sidis_api.h
pineapfel/src/: cards.cpp  evolution.cpp  fill.cpp  grid_gen.cpp  sidis_init.cpp
pineapfel_cli/: build.cpp  main.cpp
pineapfel_pyapi/pineapfel/: __init__.py
pineapfel_pyapi/src/: _pineapfel.cpp
pineapfel_pyapi/tests/: conftest.py  test_grid_vs_pineapfel.py
python-api/: index.html
quick-start/: index.html
runcards/: grid_dis.yaml  grid_dis_cc.yaml  grid_dis_ffn.yaml  grid_dis_fonll.yaml  grid_dis_mz.yaml  grid_dis_pol.yaml  grid_sia.yaml  grid_sidis.yaml  grid_sidis_pol.yaml  theory.yaml
search/: search_index.json
src/: cards.cpp  evolution.cpp
test-data/: LHCB_WP_7TEV_opt.pineappl.lz4
tests/: sidis_helper.cpp  sidis_helper.h  test_grid_vs_apfelxx.cpp
